--- a/meson/meson.build
+++ b/meson/meson.build
@@ -39,26 +39,9 @@ yyjson_dep = yyjson_subproject.dependency('yyjson')
 
 # libwebsockets install
 # -----------------------------------------------------------------
-libwebsockets_options = cmake.subproject_options()
-libwebsockets_options.add_cmake_defines({
-  'CMAKE_BUILD_TYPE': 'Release',
-  'CMAKE_C_COMPILER': 'gcc',
-  'LWS_WITH_SSL': 'ON',
-  'LWS_WITHOUT_TESTAPPS': 'ON',
-  'LWS_WITHOUT_TEST_SERVER': 'ON',
-  'LWS_WITHOUT_TEST_CLIENT': 'ON',
-  'LWS_WITH_NO_LOGS': 'ON',
-  'CMAKE_INSTALL_PREFIX': '/usr/include'
-})
-
-#'LWS_WITH_ZLIB': 'ON',
-#libwebsockets_subproject = cmake.subproject('libwebsockets', options: libwebsockets_options, dependencies: [libopenssl_dep])
-libwebsockets_subproject = cmake.subproject(
-  'libwebsockets',
-  options: libwebsockets_options
-)
-libwebsockets_dep = libwebsockets_subproject.dependency('websockets')
-# -----------------------------------------------------------------
+#libwebsockets = subproject('libwebsockets')
+#libwebsockets_dep = libwebsockets.get_variable('libwebsockets_dep')
+libwebsockets_dep = dependency('libwebsockets')
 
 sources = ['../src/main.c']
 
